# yatima-lang-alpha

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  flake.nix  history.txt  index.html  rust-toolchain  rustfmt.toml  shell.nix  substrate-tutorial.md  yatima.nix
.github/actions/benchmark-action/: package-lock.json
.github/actions/benchmark-action/src/: extract.js  extract.ts
.github/workflows/: cargo.yml  nix.yml
benches/: runtime_benchmark.rs
bytecursor/: Cargo.toml
bytecursor/src/: lib.rs
cli/: Cargo.toml  history.txt
cli/src/: execute.rs  ipfs.rs  lib.rs  main.rs  repl.rs  runtime.rs
cli/src/file/: store.rs
core/: Cargo.toml  collect_bench.sh
core/benches/: runtime.rs
core/src/: anon.rs  check.rs  cid.rs  dag.rs  defs.rs  dll.rs  embed_error.rs  eval.rs  graph.rs  ipld_error.rs  lib.rs  literal.rs  machine.rs  meta.rs  naive.rs  name.rs  opt_term.rs  package.rs  parse.rs  position.rs  prim.rs  primop.rs  runtime.rs  term.rs  typedef.rs  upcopy.rs  uses.rs
core/src/check/: ctx.rs  error.rs  prim.rs
core/src/machine/: compilation.rs  equality.rs  freevars.rs  ir.rs  machine.rs  typechecking.rs
core/src/parse/: base.rs  error.rs  literal.rs  op.rs  package.rs  span.rs  string.rs  term.rs  typedef.rs
core/src/prim/: bits.rs  bool.rs  bytes.rs  char.rs  check.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  int.rs  io.rs  nat.rs  text.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
hashexpr/: Cargo.toml  README.md  scratch
hashexpr/src/: atom.rs  base.rs  bytevec.rs  error.rs  lib.rs  link.rs  main.rs  position.rs  string.rs
hashexpr/src/base/: alphabet.rs  base_x.rs  bigint.rs  decoder.rs  encoder.rs
hashspace/: Cargo.toml  README.md
hashspace/src/: lib.rs
lang/: Cargo.toml
lang/src/: decl.rs  defs.rs  expr.rs  lib.rs  parse.rs  pre_term.rs  pre_uses.rs  term.rs  typedef.rs  unify.rs  uses.rs
lang/src/decl/: type.rs
lang/src/parse/: error.rs  expr.rs  literal.rs  op.rs  term.rs
lang/src/unify/: dag.rs  eval.rs  upcopy.rs
nix/: default.nix  devTools.nix  parseTOML.nix  rust-overlay.nix  rust.nix  sources.json
runtime/: Cargo.toml
runtime/src/: lib.rs  runtime.rs  transform.rs
sp-ipld/: Cargo.toml
sp-ipld/src/: codec.rs  dag_cbor.rs  ipld.rs  lib.rs
sp-ipld/src/dag_cbor/: decode.rs  encode.rs
sp_im/: Cargo.toml
sp_im/src/: conslist.rs  lib.rs  shared.rs  test.rs
sp_ipld/: Cargo.toml
sp_ipld/src/: bytecursor.rs  codec.rs  dag_cbor.rs  ipld.rs  lib.rs  sp_cid.rs
sp_ipld/src/dag_cbor/: decode.rs  encode.rs
sp_ipld/src/sp_cid/: arb.rs  cid.rs  error.rs  version.rs
src/: anon_term.rs  core.rs  dag.rs  decode_error.rs  definition.rs  defs.rs  embed.rs  file.rs  hashspace.rs  imports.rs  ipfs.rs  lib.rs  literal.rs  machine.rs  main.rs  meta_term.rs  package.rs  parse.rs  primop.rs  repl.rs  term.rs  unembed_error.rs  uses.rs  utils.rs  valus.rs  wasm_binds.rs
src/core/: check.rs  dag.rs  dll.rs  eval.rs  literal.rs  machine.rs  primop.rs  upcopy.rs  uses.rs
src/dag/: anon_term.rs  name_meta.rs  position_meta.rs
src/file/: error.rs  parse.rs  store.rs
src/hashspace/: cache.rs  defs.rs  embed.rs  meta_term.rs  package.rs  server.rs
src/machine/: compilation.rs  freevars.rs  ir.rs  machine.rs
src/parse/: base.rs  error.rs  literal.rs  package.rs  string.rs  term.rs
src/repl/: command.rs
src/term/: decode_error.rs  literal.rs  primop.rs  uses.rs
src/valus/: dag.rs  eval.rs  literal.rs  parser.rs  primop.rs  term.rs  uses.rs
src/valus/dag/: prim.rs
templates/: index.html.hbs
utils/: Cargo.toml  README.md
utils/src/: file.rs  graph.rs  ipfs.rs  lib.rs  logging.rs  repl.rs  store.rs
utils/src/file/: error.rs  parse.rs
utils/src/repl/: command.rs  error.rs
valus/: Cargo.toml  LICENSE  README.md
valus/src/: dag.rs  dll.rs  lib.rs  main.rs  parser.rs  term.rs
valus/tests/: dll.rs  parser.rs  reducer.rs
wasm/: Cargo.toml
wasm/src/: ast.rs  binary.rs  lib.rs
web/: Cargo.toml  bootstrap.js  default.nix  index.html  index.js  package-lock.json  package.json  webpack.config.js  yarn.nix
web/src/: ipfs.rs  lib.rs  repl.rs  runtime.rs  store.rs  terminal_sequences.rs  utils.rs  wasm_binds.rs
web/www/: index.html  package-lock.json  package.json
yatima-core/: Cargo.toml
yatima-core/src/: check.rs  dag.rs  defs.rs  embed.rs  embed_error.rs  eval.rs  ipld_error.rs  lib.rs  literal.rs  package.rs  parse.rs  position.rs  primop.rs  term.rs  upcopy.rs
yatima-core/src/parse/: base.rs  error.rs  literal.rs  term.rs
yatima-wasp/: Cargo.toml
yatima-wasp/go/: contract_test.go  go.mod  go.sum
yatima-wasp/src/: lib.rs
yatima_core/: Cargo.toml
yatima_core/src/: anon.rs  check.rs  cid.rs  dag.rs  defs.rs  eval.rs  graph.rs  ipld_error.rs  lib.rs  literal.rs  meta.rs  name.rs  package.rs  parse.rs  position.rs  prim.rs  primop.rs  runtime.rs  term.rs  text.rs  upcopy.rs  uses.rs
yatima_core/src/check/: ctx.rs  error.rs
yatima_core/src/machine/: freevars.rs  ir.rs  machine.rs
yatima_core/src/parse/: base.rs  error.rs  literal.rs  op.rs  package.rs  string.rs  term.rs
yatima_core/src/prim/: bits.rs  bool.rs  bytes.rs  char.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  int.rs  nat.rs  text.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
