[workspace]
members = [ "yatima_core" ]

[package]
name = "yatima"
description = "A dependently typed programming language for the decentralized web"
version = "0.1.0"
authors = ["John C. Burnham <john@yatima.io>", "Anders C. Sørby <anders@yatima.io>", "Gabriel Barreto <gabriel@yatima.io>", "Samuel Burnham <samuel@yatima.io>"]
edition = "2018"

[lib]
name = "yatima"
crate-type = ["cdylib", "lib"]

[dependencies]
yatima_core = { path = "yatima_core"}
cid = ">= 0.6.0"
multihash = "0.13.2"
multibase = "0.9.1"
libipld = { default-features = false, features = ["dag-cbor"], version = "0.11.0" }
structopt = "0.3.21"
nom = "6.0.1"
nom_locate = "3.0.0"
bit-vec = "0.6.3"
base-x = "0.2.8"
futures = "0.3.13"
rustyline = "7.1.0"
directories-next = "2.0.0"
reqwest = { version = "0.11.3", features = [ "multipart", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.5", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8.3"
quickcheck_macros = "1.0.0"

[profile.dev]
debug = 2
