[package]
name = "yatima-cli"
description = "A dependently typed programming language for the decentralized web"
version = "0.1.0"
authors = ["John C. Burnham <john@yatima.io>", "Anders C. Sørby <anders@yatima.io>", "Gabriel Barreto <gabriel@yatima.io>", "Samuel Burnham <sam@yatima.io>"]
edition = "2018"

[[bin]]
name = "yatima"
path = "src/main.rs"

[dependencies]
yatima-core = { path = "../core", features = ["std"]}
yatima-utils = { path = "../utils"}
yatima-runtime = { path = "../runtime" }
# sp-cid = { git = "https://github.com/yatima-inc/sp-cid", branch = "main"  }
sp-cid = "0.1.0"
# sp-multihash = { git = "https://github.com/yatima-inc/sp-multihash", branch = "main"  }
sp-multihash = "0.1.0"
sp-ipld = { git = "https://github.com/yatima-inc/sp-ipld", branch = "main"  }
# bytecursor = { git = "https://github.com/yatima-inc/bytecursor", branch = "main"  }
bytecursor = "0.1.2"
sized-chunks = { version = "0.6.5", default-features = false }
# sized-chunks = { git = "https://github.com/yatima-inc/sized-chunks", branch = "main", default-features = false }
multibase = "0.9.1"
multiaddr = "*"
structopt = "0.3.21"
nom = "6.0.1"
nom_locate = { git = "https://github.com/yatima-inc/nom_locate", branch = "main"}
bit-vec = "0.6.3"
base-x = "0.2.8"
futures = "0.3.13"
directories-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ropey = { git = "https://github.com/yatima-inc/ropey", branch = "main" }
url = "2.2.2"
# ipfs = "0.2.1"

# Not wasm/wasi compatible
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "7.1.0"
tokio = { version = "1.5", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.3", features = [ "multipart", "json" ] }

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8.3"
quickcheck_macros = "1.0.0"
