[package]
name = "hashexpr"
version = "0.1.0"
authors = ["John C. Burnham <john@yatima.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.118"
nom = "6.0.1"
num-bigint = "0.3.1"
blake3 = "0.3.7"
nom_locate = "3.0.0"

[dev-dependencies]
quickcheck = "^0.9.2"
rand = "0.7.3"
quickcheck_macros = "^0.9.1"
