[package]
name = "sp-ipld"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = { version = "3", default-features = false }
cid =  "0.6.1"
byteorder = { version = "1", default-features = false }

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8.3"
quickcheck_macros = "1.0.0"
libipld = { version = "0.11.0", features = ["dag-cbor"] }
tokio = { version = "1.5", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.3", features = [ "multipart", "json" ] }
serde_json = { version = "1.0" }