[package]
name = "yatima-utils"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yatima-core = { path = "../core" }
sp-std = { version = "3", default-features = false }
sp-cid = "0.1"
sp-multihash = "0.1"
sp-ipld = "0.1"
multibase = "0.9.1"
multiaddr = "*"
sp-im = { git = "https://github.com/yatima-inc/sp-im", branch = "sb/no-std", default-features = false }
sized-chunks = { git = "https://github.com/yatima-inc/sized-chunks", branch = "master" }
bit-vec = "0.6.3"
num-bigint = "0.3.1"
nom = "6.0.1"
nom_locate = "3.0.1"
base-x = "0.2.8"
petgraph = "0.5.1"
ropey = {git = "https://github.com/yatima-inc/ropey", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[target."wasm32-unknown-unknown".dependencies]
# This is to allow for universal logging macros
wasm-bindgen = "0.2.72"
