[package]
name = "yatima-utils"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yatima-core = { path = "../core" }
yatima-runtime = { path = "../runtime" }
sp-std = { version = "3", default-features = false }
sp-cid = "0.1"
sp-multihash = "0.1"
sp-ipld = "0.1"
bytecursor = "0.1"
multibase = "0.9.1"
multiaddr = "*"
sp-im = "0.1"
sized-chunks = "0.6.5"
bit-vec = "0.6.3"
num-bigint = "0.3.1"
nom = "6.0.1"
nom_locate = "3.0.1"
base-x = "0.2.8"
petgraph = "0.5.1"
ropey = {git = "https://github.com/yatima-inc/ropey", branch = "main"}
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = [ "multipart", "json", "blocking" ] }
wasm-bindgen = "0.2.72"
wasm-bindgen-futures = "0.4.22"
