[package]
name = "valus"
version = "0.1.0"
authors = ["Gabriel Barreto <gabriel.aquino.barreto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"
im  = "15.0.0"
hashexpr = { path = "../hashexpr"}

[dev-dependencies]
quickcheck = "^0.9.2"
rand = "0.7.3"
quickcheck_macros = "^0.9.1"
