[package]
name = "yatima-web"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
yatima-core = { path = "../core" }
yatima-utils = { path = "../utils" }
yatima-runtime = { path = "../runtime" }
base64 = "0.13.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.49"
multiaddr = "*"
sp-cid = "0.1"
sp-ipld = "0.1"
bytecursor = "0.1"
sized-chunks = "0.6.5"
unicode-segmentation = "1.8.0"
wasm-bindgen = { version = "0.2.72", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.22"
xterm-js-rs = { version = "0.1.1", features = ["xterm-addon-fit", "xterm-addon-search", "xterm-addon-web-links"] }
serde_json = { version = "1.0" }

[dependencies.web-sys]
version = "0.3.49"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Storage',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"
#Also do you know how to pipe cargo commands into a file, grep etc? The usual bash commands don't work on it
