[package]
name = "yatima-wasp"
version = "0.1.0"
authors = ["Anders Christiansen Sørby <anders@sorby.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yatima = { path = ".." }
wasmlib = { git = "https://github.com/iotaledger/wasp", branch = "develop-0.4.0-refactor" }
