[package]
name = "yatima_core"
description = "The core evaluation, typechecking and content-addressing infrastructure of the Yatima Language"
version = "0.1.0"
authors = ["John C. Burnham <john@yatima.io>", "Anders C. Sørby <anders@yatima.io>", "Gabriel Barreto <gabriel@yatima.io>", "Samuel Burnham <samuel@yatima.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#No_std compatible
sp-std = {version = "3", default-features = false}
cid = {version = "0.6.1", default-features = false}
multihash = {version = "0.13.2", default-features = false, features = ["secure-hashes"]}
num-bigint = {version = "0.3", default-features = false}
nom = {version = "6", default-features = false, features = ["alloc"]}
base-x = {version = "0.2.8", default-features = false}
multibase = {version = "0.9.1", default-features = false}
nom_locate = {git = "https://github.com/yatima-inc/nom_locate"}
ropey = {git = "https://github.com/yatima-inc/ropey"}

#Still require std
libipld = { default-features = false, features = ["dag-cbor"], version = "0.11.0" }
im  = "15.0.0"
petgraph = "0.5.1"

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8.3"
quickcheck_macros = "1.0.0"
