[package]
name = "yatima_core"
description = "The core evaluation, typechecking and content-addressing infrastructure of the Yatima Language"
version = "0.1.0"
authors = ["John C. Burnham <john@yatima.io>", "Anders C. Sørby <anders@yatima.io>", "Gabriel Barreto <gabriel@yatima.io>", "Samuel Burnham <samuel@yatima.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.6.1"
multihash = "0.13.2"
multibase = "0.9.1"
libipld = { default-features = false, features = ["dag-cbor"], version = "0.11.0" }
num-bigint = "0.3.1"
nom = "6.0.1"
nom_locate = "3.0.0"
base-x = "0.2.8"
petgraph = "0.5.1"
ropey = "1.2.0"

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.8.3"
quickcheck_macros = "1.0.0"
